--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"Blog",
+    "subTitle":"https://H1DDENADM1N.github.io",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/65646535?v=4",
     "GMEEK_VERSION":"last"
 }
